tests/invalid/type_error.f77
PROGRAM ERROTIPO
INTEGER X
LOGICAL B
X = .TRUE.
B = 3 + 4
END
